--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,31 +1,28 @@
 # main links links
 main:
+  - title: "Research"
+    url: /Research/
+        
+  - title: "Blog Posts"
+    url: /year-archive/
+ 
   - title: "Publications"
     url: /publications/
 
-  - title: "Patents"
-    url: /patents/
-
   - title: "Talks"
-    url: /talks/      
+    url: /talks/    
 
   - title: "Awards"
     url: /awards/
-
-  - title: "Services"
-    url: /services/
-
-  - title: "Teaching"
-    url: /teaching/  
-
-  - title: "Softwares"
-    url: /softwares/
-
+   
+  - title: "CV"
+    url: /cv/
+  
+  # - title: "Teaching"
+  #   url: /teaching/    
+    
   # - title: "Portfolio"
   #   url: /portfolio/
-        
-  # - title: "Blog Posts"
-  #   url: /year-archive/
-    
+  
   # - title: "Guide"
   #   url: /markdown/
